добавит верстку слайдера

--- a/src/404.html
+++ b/src/404.html
@@ -36,10 +36,10 @@
           Неправильно набран адрес или такой страницы не существует
         </p>
         <div class="not-found__btns-wrapper">
-          <a class="not-found__link btn btn_reset btn_white" href="javascript:history.back()">
+          <a class="not-found__link btn btn_white" href="javascript:history.back()">
             Вернуться назад
           </a>
-          <a class="not-found__link btn btn_reset btn_blue" href="index.html">
+          <a class="not-found__link btn btn_blue" href="index.html">
             На главную
           </a>
         </div>
