--- a/src/akcii.html
+++ b/src/akcii.html
@@ -10,7 +10,7 @@
   <main class="main promo-page__main">
     <section class="section promo-page__section">
       <div class="container promo-page__container">
-        <h1 class="promo-page__title title title_small">
+        <h1 class="promo-page__title title title_25">
           Акции Сибири
         </h1>
         <div class="promo-page__btn-wrapper">
@@ -33,14 +33,16 @@
             <span class="promo-page__card-period">
               <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_937_4871)">
-                <path d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z" stroke="#748D55" stroke-width="1.5"/>
+                  <path
+                    d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z"
+                    stroke="#748D55" stroke-width="1.5" />
                 </g>
                 <defs>
-                <clipPath id="clip0_937_4871">
-                <rect width="16" height="16" fill="white" transform="translate(0.75)"/>
-                </clipPath>
+                  <clipPath id="clip0_937_4871">
+                    <rect width="16" height="16" fill="white" transform="translate(0.75)" />
+                  </clipPath>
                 </defs>
-              </svg>                
+              </svg>
               <p class="promo-page__card-date-text">
                 Осталось 12 дней
               </p>
@@ -61,14 +63,16 @@
             <span class="promo-page__card-period">
               <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_937_4871)">
-                <path d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z" stroke="#748D55" stroke-width="1.5"/>
+                  <path
+                    d="M8.75 4.31579V8.36842L10.9605 10.2105M15.75 8C15.75 11.866 12.616 15 8.75 15C4.88401 15 1.75 11.866 1.75 8C1.75 4.13401 4.88401 1 8.75 1C12.616 1 15.75 4.13401 15.75 8Z"
+                    stroke="#748D55" stroke-width="1.5" />
                 </g>
                 <defs>
-                <clipPath id="clip0_937_4871">
-                <rect width="16" height="16" fill="white" transform="translate(0.75)"/>
-                </clipPath>
+                  <clipPath id="clip0_937_4871">
+                    <rect width="16" height="16" fill="white" transform="translate(0.75)" />
+                  </clipPath>
                 </defs>
-              </svg>                
+              </svg>
               <p class="promo-page__card-date-text">
                 Осталось 12 дней
               </p>
