--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -39,7 +39,7 @@
           </label>
         </div>
 
-        <button type="submit" class="btn btn_green btn_reset form__btn">
+        <button type="submit" class="btn btn_green form__btn">
           Отправить
         </button>
 
@@ -233,7 +233,7 @@
         </a> -->
       </div>
 
-      <button class="btn btn_dark btn_reset footer__btn popup-link" href="#popup-notification">
+      <button class="btn btn_dark footer__btn popup-link" href="#popup-notification">
         Форма уведомления
       </button>
 
