--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,184 @@
     <section class="section section_banner banner">
       <div class="container banner__container">
 
-        <div class="bunner__content-wrap">
-          <h2 class="bunner__title">
-            Старт продаж 1 очереди
-            в малоэтажном ЖК
-          </h2>
-          <p class="bunner__text">
-            Срок сдачи 1 очереди – II квартал 2025 года
-          </p>
+        <!-- <div class="banner__content-wrap"> -->
+        <h2 class="banner__title">
+          Старт продаж 1 очереди
+          в малоэтажном ЖК
+        </h2>
 
-          <a class="bunner__btn btn btn_dark btn_reset" href="#plans" scrollspy="plans">
-            Смотреть планировки
-          </a>
+        <ul class="banner__list">
+          <li class="banner__item">
+            <svg width="14" height="17" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M7.71652 1.51142C7.71652 1.18037 7.71652 0.842466 7.71214 0.5L7.05579 0.509132L6.39944 0.518265C6.39944 0.518265 6.39944 0.522831 6.39944 0.525114C6.43882 3.86301 6.07345 5.69178 5.17644 6.63927C4.2466 7.62329 2.57509 7.81507 0 7.81507V8.5V9.18493C6.27692 9.18493 6.27911 11.4247 6.28348 15.4886C6.28348 15.8196 6.28348 16.1575 6.28786 16.5L7.60056 16.4817C7.60056 16.4817 7.60056 16.4772 7.60056 16.4749C7.56118 13.137 7.92655 11.3082 8.82356 10.3607C9.7534 9.37671 11.4249 9.18493 14 9.18493V7.81507C7.72308 7.81507 7.72089 5.57534 7.71652 1.51142Z"
+                fill="white" />
+            </svg>
+            <p class="banner__item-text">
+              вид на лес
+            </p>
+          </li>
+          <li class="banner__item">
+            <svg width="14" height="17" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M7.71652 1.51142C7.71652 1.18037 7.71652 0.842466 7.71214 0.5L7.05579 0.509132L6.39944 0.518265C6.39944 0.518265 6.39944 0.522831 6.39944 0.525114C6.43882 3.86301 6.07345 5.69178 5.17644 6.63927C4.2466 7.62329 2.57509 7.81507 0 7.81507V8.5V9.18493C6.27692 9.18493 6.27911 11.4247 6.28348 15.4886C6.28348 15.8196 6.28348 16.1575 6.28786 16.5L7.60056 16.4817C7.60056 16.4817 7.60056 16.4772 7.60056 16.4749C7.56118 13.137 7.92655 11.3082 8.82356 10.3607C9.7534 9.37671 11.4249 9.18493 14 9.18493V7.81507C7.72308 7.81507 7.72089 5.57534 7.71652 1.51142Z"
+                fill="white" />
+            </svg>
+            <p class="banner__item-text">
+              тишина природы
+            </p>
+          </li>
+          <li class="banner__item">
+            <svg width="14" height="17" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M7.71652 1.51142C7.71652 1.18037 7.71652 0.842466 7.71214 0.5L7.05579 0.509132L6.39944 0.518265C6.39944 0.518265 6.39944 0.522831 6.39944 0.525114C6.43882 3.86301 6.07345 5.69178 5.17644 6.63927C4.2466 7.62329 2.57509 7.81507 0 7.81507V8.5V9.18493C6.27692 9.18493 6.27911 11.4247 6.28348 15.4886C6.28348 15.8196 6.28348 16.1575 6.28786 16.5L7.60056 16.4817C7.60056 16.4817 7.60056 16.4772 7.60056 16.4749C7.56118 13.137 7.92655 11.3082 8.82356 10.3607C9.7534 9.37671 11.4249 9.18493 14 9.18493V7.81507C7.72308 7.81507 7.72089 5.57534 7.71652 1.51142Z"
+                fill="white" />
+            </svg>
+            <p class="banner__item-text">
+              чистовой ремонт
+            </p>
+          </li>
+        </ul>
+
+        <p class="banner__text">
+          Срок сдачи 1 очереди – II квартал 2025 года
+        </p>
+
+        <a class="banner__btn btn btn_dark btn_reset" href="#plans" scrollspy="plans">
+          Смотреть планировки
+        </a>
+        <!-- </div> -->
+
+      </div>
+    </section>
+
+    <section class="section section_building building building-slider">
+      <div class="container building__container-top">
+        <h2 class="building__title title title_40">
+          Мы строим
+        </h2>
+      </div>
+
+      <div class="container building__container-bot building_swiper">
+        <ul class="building__cards-list swiper-wrapper">
+          <li class="building__cards-item swiper-slide">
+            <div class="building__card-img">
+              <img src="@img/building-1.jpg" alt="">
+              <div class="building__card-info">
+                <p class="building__card-label">
+                  СКОРО
+                </p>
+              </div>
+            </div>
+            <div class="building__card-content">
+              <h3 class="building__card-title title title_25">
+                Островский
+              </h3>
+              <p class="building__card-text text">
+                Новый взгляд на городскую жизнь. Свободные планировки, более 45 м2 прогулочных зон, детских площаок и
+                разноуровневая застройка домов для любителей размерености и спокойствия
+              </p>
+              <p class="building__card-price">
+                от 4,3 млн руб.
+              </p>
+              <div class="building__card-footer">
+                <div class="building__card-bot-wrap">
+                  <p class="building__card-key">
+                    Срок сдачи
+                  </p>
+                  <p class="building__card-value">
+                    II квартал 2025
+                  </p>
+                </div>
+                <div class="building__card-bot-wrap">
+                  <p class="building__card-key">
+                    Площадь
+                  </p>
+                  <p class="building__card-value">
+                    от 28,72 до 83,61
+                  </p>
+                </div>
+                <p class="building__card-link">
+                  128 квартир
+                </p>
+              </div>
+            </div>
+          </li>
+          <li class="building__cards-item swiper-slide">
+            <div class="building__card-img">
+              <img src="@img/building-2.jpg" alt="">
+              <div class="building__card-info">
+                <svg width="24" height="27" viewBox="0 0 24 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M12 0C12 2 8 6 4.80015 6M12 0V6.75M12 0C12 2 16 6 19.1998 6M12 27V14.625M12 6.75C10.6666 9.25 7.99983 14 1.59997 14M12 6.75V14.625M12 6.75C13.3334 9.25 16.0002 14 22.4 14M12 14.625C10.4 17.4583 5.75988 22.5 0 22.5M12 14.625C13.6001 17.4583 18.2401 22.5 24 22.5"
+                    stroke="white" stroke-width="3" />
+                </svg>
+                <p class="building__card-label building__card-label_small">
+                  Сосновый
+                </p>
+                <div class="building__card-info-btn">
+                  Сдан
+                </div>
+              </div>
+            </div>
+            <div class="building__card-content">
+              <h3 class="building__card-title title title_25">
+                Сосновый квартал
+              </h3>
+              <p class="building__card-text text">
+                «Сосновый» – уютный район из 8 малоэтажных домов в окружении соснового леса. Квартал для тех, кто ценит
+                баланс городской и загородной жизни. <br><br>
+                Места общего пользования, прогулочные зоны, Family-space и коммерческие помещения созданные,
+                чтобы делать вашу жизнь приятнее каждый день.
+              </p>
+              <p class="building__card-price">
+                <!-- от 4,3 млн руб. -->
+              </p>
+              <div class="building__card-footer">
+                <div class="building__card-bot-wrap">
+                  <p class="building__card-key">
+                    Срок сдачи
+                  </p>
+                  <p class="building__card-value">
+                    II квартал 2025
+                  </p>
+                </div>
+                <!-- <div class="building__card-bot-wrap">
+                  <p class="building__card-key">
+                    Площадь
+                  </p>
+                  <p class="building__card-value">
+                    от 28,72 до 83,61
+                  </p>
+                </div>
+                <p class="building__card-link">
+                  128 квартир
+                </p> -->
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="swiper-navigation">
+        <div class="swiper-button swiper-button-prev">
+          <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.8">
+              <rect x="-0.5" y="0.5" width="54" height="54" rx="27" transform="matrix(-1 0 0 1 54.25 0.5)"
+                stroke="#CBCBCB" />
+              <path d="M32.25 20.5L23.25 28L32.25 35.5" stroke="#CBCBCB" stroke-width="2" stroke-linejoin="round" />
+            </g>
+          </svg>
+        </div>
+
+        <div class="swiper-button swiper-button-next">
+          <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.8">
+              <rect x="-0.5" y="0.5" width="54" height="54" rx="27" transform="matrix(-1 0 0 1 54.25 0.5)"
+                stroke="#CBCBCB" />
+              <path d="M23.25 20.5L32.25 28L23.25 35.5" stroke="#CBCBCB" stroke-width="2" stroke-linejoin="round" />
+            </g>
+          </svg>
         </div>
 
       </div>
@@ -216,7 +382,7 @@
             </button>
           </div>
 
-          <button class="choice__btn-request btn btn_reset btn_dark popup-link" href="#popup-form">
+          <button class="choice__btn-request btn btn_dark popup-link" href="#popup-form">
             Запросить планировки
           </button>
 
@@ -228,122 +394,122 @@
   </main>
 
 
-    <section class="section section_regions regions">
-      <div class="container regions__container">
-        <h2 class="regions__title title">
-          В районах Сибири
-        </h2>
+  <section class="section section_regions regions">
+    <div class="container regions__container">
+      <h2 class="regions__title title">
+        В районах Сибири
+      </h2>
 
-        <ul class="regions__list owl-carousel owl-carousel-index">
-          <li class="regions__item regions__item_1">
-            <h3 class="regions__item-title">
-              Гармония с природой
-            </h3>
+      <ul class="regions__list owl-carousel owl-carousel-index">
+        <li class="regions__item regions__item_1">
+          <h3 class="regions__item-title">
+            Гармония с природой
+          </h3>
 
-            <p class="regions__item-text">
-              Уединенный район, будет отличным решением для любителей открытых естественных видов, вдали от тесной
-              городской застройки и суеты.
-            </p>
-          </li>
+          <p class="regions__item-text">
+            Уединенный район, будет отличным решением для любителей открытых естественных видов, вдали от тесной
+            городской застройки и суеты.
+          </p>
+        </li>
 
-          <li class="regions__item regions__item_2">
-            <h3 class="regions__item-title">
-              Тихий район
-            </h3>
+        <li class="regions__item regions__item_2">
+          <h3 class="regions__item-title">
+            Тихий район
+          </h3>
 
-            <p class="regions__item-text">
-              Удалённое от больших автомагистралей расположение и закрытый от машин и посторонних людей двор
-            </p>
-          </li>
+          <p class="regions__item-text">
+            Удалённое от больших автомагистралей расположение и закрытый от машин и посторонних людей двор
+          </p>
+        </li>
 
-          <li class="regions__item regions__item_3">
-            <h3 class="regions__item-title">
-              Все нужное рядом
-            </h3>
+        <li class="regions__item regions__item_3">
+          <h3 class="regions__item-title">
+            Все нужное рядом
+          </h3>
 
-            <p class="regions__item-text">
-              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
-              получения бытовых услуг и товаров первой необходимости
-            </p>
-          </li>
+          <p class="regions__item-text">
+            Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
+            получения бытовых услуг и товаров первой необходимости
+          </p>
+        </li>
 
-          <li class="regions__item regions__item_4">
-            <h3 class="regions__item-title">
-              Уникальная экосистема
-            </h3>
+        <li class="regions__item regions__item_4">
+          <h3 class="regions__item-title">
+            Уникальная экосистема
+          </h3>
 
-            <p class="regions__item-text">
-              Мы сохранили среду, созданную природой: живописный сосновый лес, который даже зимой будут радовать жителей
-              ярким зеленым обликом
-            </p>
-          </li>
+          <p class="regions__item-text">
+            Мы сохранили среду, созданную природой: живописный сосновый лес, который даже зимой будут радовать жителей
+            ярким зеленым обликом
+          </p>
+        </li>
 
-          <li class="regions__item regions__item_5">
-            <h3 class="regions__item-title">
-              Закрытые и безопасные дворы без машин
-            </h3>
+        <li class="regions__item regions__item_5">
+          <h3 class="regions__item-title">
+            Закрытые и безопасные дворы без машин
+          </h3>
 
-            <p class="regions__item-text">
-              Ваши дети смогут спокойно и безопасно находиться на прогулке, а вы заниматься домашними делами, наблюдая
-              за ними прямо из окна
-            </p>
-          </li>
+          <p class="regions__item-text">
+            Ваши дети смогут спокойно и безопасно находиться на прогулке, а вы заниматься домашними делами, наблюдая
+            за ними прямо из окна
+          </p>
+        </li>
 
-          <li class="regions__item regions__item_2">
-            <h3 class="regions__item-title">
-              Все нужное рядом
-            </h3>
+        <li class="regions__item regions__item_2">
+          <h3 class="regions__item-title">
+            Все нужное рядом
+          </h3>
 
-            <p class="regions__item-text">
-              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
-              получения бытовых услуг и товаров первой необходимости
-            </p>
-          </li>
-
-
-        </ul>
+          <p class="regions__item-text">
+            Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
+            получения бытовых услуг и товаров первой необходимости
+          </p>
+        </li>
 
 
-      </div>
-    </section>
+      </ul>
 
-    <section class="section section_slider slider">
-      <div class="container slider__container">
-        <h5 class="slider__title">
-          Только 4-х этажные дома
-        </h5>
 
-        <ul class="slider__list owl-carousel owl-carousel-slider">
-          <li class="slider__item slider__item_1">
-            <img src="@img/slide-1.jpg" alt="фасад дома">
-          </li>
-          <li class="slider__item slider__item_2">
-            <img src="@img/slide-2.jpg" alt="фасад дома" style="object-fit: cover;">
-          </li>
-          <li class="slider__item slider__item_3">
-            <img src="@img/slide-3.jpg" alt="фасад дома" style="object-fit: cover;">
-          </li>
-          <li class="slider__item slider__item_4">
-            <img src="@img/slide-4.jpg" alt="фасад дома">
-          </li>
-          <li class="slider__item slider__item_5">
-            <img src="@img/slide-5.jpg" alt="фасад дома">
-          </li>
-          <!-- <li class="slider__item slider__item_6">
-            <img src="@img/slide-6.jpg" alt="фасад дома">
-          </li> -->
-          <li class="slider__item slider__item_7">
-            <img src="@img/slide-7.jpg" alt="фасад дома">
-          </li>
-          <li class="slider__item slider__item_8">
+    </div>
+  </section>
+
+  <section class="section section_slider slider">
+    <div class="container slider__container">
+      <h5 class="slider__title">
+        Только 4-х этажные дома
+      </h5>
+
+      <ul class="slider__list owl-carousel owl-carousel-slider">
+        <li class="slider__item slider__item_1">
+          <img src="@img/slide-1.jpg" alt="фасад дома">
+        </li>
+        <li class="slider__item slider__item_2">
+          <img src="@img/slide-2.jpg" alt="фасад дома" style="object-fit: cover;">
+        </li>
+        <li class="slider__item slider__item_3">
+          <img src="@img/slide-3.jpg" alt="фасад дома" style="object-fit: cover;">
+        </li>
+        <li class="slider__item slider__item_4">
+          <img src="@img/slide-4.jpg" alt="фасад дома">
+        </li>
+        <li class="slider__item slider__item_5">
+          <img src="@img/slide-5.jpg" alt="фасад дома">
+        </li>
+        <li class="slider__item slider__item_6">
+          <img src="@img/slide-6.jpg" alt="фасад дома">
+        </li>
+        <li class="slider__item slider__item_7">
+          <img src="@img/slide-7.jpg" alt="фасад дома">
+        </li>
+        <!-- <li class="slider__item slider__item_8">
             <img src="@img/slide-8.jpg" alt="фасад дома">
           </li>
           <li class="slider__item slider__item_9">
             <img src="@img/slide-9.jpg" alt="фасад дома">
-          </li>
-        </ul>
-      </div>
-    </section>
+          </li> -->
+      </ul>
+    </div>
+  </section>
 
 
   <main class="main glavnaya__main glavnaya__main_bot">
@@ -419,7 +585,7 @@
           <h3 class="plans__name">
             <!-- 1-комнатная 40,84м2 -->
           </h3>
-          <button class="plans__btn btn btn_reset btn_light-green popup-link" href="popup-request">
+          <button class="plans__btn btn btn_light-green popup-link" href="popup-request">
             Узнать цену
           </button>
         </div>
@@ -505,7 +671,7 @@
           <div id="map" class="map__container">
           </div>
           <div class="map__mark-list-wrap">
-            
+
             <h2 class="map__title">
               Расположение и инфраструктура
             </h2>
