--- a/src/novosti.html
+++ b/src/novosti.html
@@ -10,7 +10,7 @@
   <main class="main news-page__main">
     <section class="section news-page__section">
       <div class="container news-page__container">
-        <h1 class="news-page__title title title_small">
+        <h1 class="news-page__title title title_25">
           Новости Сибири
         </h1>
         <div class="news-page__btn-wrapper">
