--- a/src/sposob-pokupki.html
+++ b/src/sposob-pokupki.html
@@ -4,14 +4,176 @@
 "title": "Сибирь. Способ покупки",
 })
 
-<body class="not-found" data-page="404">
+<body class="buy-page">
   @@include('./html/header.html', {})
 
   <main class="main">
-    <section class="section not-found">
-      <div class="container not-found__container">
+    <section class="section slider">
+      <div class="container slider__container">
+        <h1 class="slider__title title title_25">
+          Способы покупки
+        </h1>
 
+        <ul class="slider__list">
+          <li class="slider__item" data-id="1">
+            <h2 class="slider__subtitle title title_40">
+              Ипотека
+            </h2>
+
+            <p class="slider__text" href="sposob-pokupki.html">
+              Ипотека — это финансовый инструмент, который существенно облегчает процесс приобретения жилья. Существует
+              много причин, почему брать ипотеку может быть выгодным решением, а с нами это ещё и просто. <br><br><br>
+              Подобрать выгодную ставку, правильно заполнить анкету для заявки поможет ипотечный специалист компании.
+              Подать документы и получить положительное ипотечное решение можно дистанционно. На время оформления
+              документов квартира бронируется, цена фиксируется.
+            </p>
+
+            <button class="slider__btn btn btn_green">
+              Оставить заявку
+            </button>
+
+            <div class="slider__img">
+              <img src="img/buy-slide-1.jpg" alt="Сибирь. Способ покупки">
+            </div>
+          </li>
+        </ul>
+
+        <ul class="slider__toggle-list">
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Ипотека
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Рассрочка
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Сертификаты
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              100% оплата
+            </button>
+          </li>
+        </ul>
+
+        <ul class="slider__facts-list">
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              Ставки по ипотеке от 3,8%
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              2 дня — средний срок рассмотрения заявки 
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              1 анкета для всех банков-партнёров
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              5 банков-партнёров
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              Снижаем ставки за свой счёт
+            </p>
+          </li>
+        </ul>
       </div>
+
+    </section>
+
+    <section class="section slider">
+      <div class="container slider__container">
+        <h2 class="slider__title title title_25">
+          Актуальные программы
+        </h2>
+
+        <ul class="slider__list">
+          <li class="slider__item" data-id="1">
+            <h2 class="slider__subtitle title title_40">
+              Ипотека
+            </h2>
+
+            <p class="slider__text" href="sposob-pokupki.html">
+              Ипотека — это финансовый инструмент, который существенно облегчает процесс приобретения жилья. Существует
+              много причин, почему брать ипотеку может быть выгодным решением, а с нами это ещё и просто. <br><br><br>
+              Подобрать выгодную ставку, правильно заполнить анкету для заявки поможет ипотечный специалист компании.
+              Подать документы и получить положительное ипотечное решение можно дистанционно. На время оформления
+              документов квартира бронируется, цена фиксируется.
+            </p>
+
+            <button class="slider__btn btn btn_green">
+              Оставить заявку
+            </button>
+
+            <div class="slider__img">
+              <img src="img/buy-slide-1.jpg" alt="Сибирь. Способ покупки">
+            </div>
+          </li>
+        </ul>
+
+        <ul class="slider__toggle-list">
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Ипотека
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Рассрочка
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              Сертификаты
+            </button>
+          </li>
+          <li class="slider__toggle-item">
+            <button class="slider__toggle-link" href="sposob-pokupki.html" data-id="1">
+              100% оплата
+            </button>
+          </li>
+        </ul>
+
+        <ul class="slider__facts-list">
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              Ставки по ипотеке от 3,8%
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              2 дня — средний срок рассмотрения заявки 
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              1 анкета для всех банков-партнёров
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              5 банков-партнёров
+            </p>
+          </li>
+          <li class="slider__facts-item">
+            <p class="slider__facts-text">
+              Снижаем ставки за свой счёт
+            </p>
+          </li>
+        </ul>
+      </div>
+
     </section>
   </main>
 
