--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -40,7 +40,7 @@
           </label>
         </div>
 
-        <button class="btn btn_dark btn_reset form__btn">
+        <button class="btn btn_dark form__btn">
           Отправить
         </button>
 
@@ -56,8 +56,8 @@
 
         <span class="form__close-btn popup-close">
           <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5"/>
-          </svg>              
+            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5" />
+          </svg>
         </span>
 
       </form>
@@ -82,7 +82,8 @@
               *
             </span>
 
-            <input class="request__input request__input_apartment" type="text" name="apartment" placeholder="Выберите квартиру" readonly required>
+            <input class="request__input request__input_apartment" type="text" name="apartment"
+              placeholder="Выберите квартиру" readonly required>
           </label>
           <label class="request__label">
             <span class="request__label-text">
@@ -92,7 +93,8 @@
               *
             </span>
 
-            <input class="request__input request__input_name" type="text" name="name" placeholder="Введите имя" required>
+            <input class="request__input request__input_name" type="text" name="name" placeholder="Введите имя"
+              required>
           </label>
           <label class="request__label">
             <span class="request__label-text">
@@ -101,7 +103,8 @@
             <span class="request__label-star">
               *
             </span>
-            <input class="request__input request__input_phone" type="tel" name="phone" placeholder="7" required value="7">
+            <input class="request__input request__input_phone" type="tel" name="phone" placeholder="7" required
+              value="7">
           </label>
           <label class="request__label">
             <span class="request__label-text">
@@ -117,7 +120,7 @@
           </label>
         </div>
 
-        <button class="btn btn_dark btn_reset request__btn">
+        <button class="btn btn_dark request__btn">
           Отправить
         </button>
 
@@ -133,8 +136,8 @@
 
         <span class="request__close-btn popup-close">
           <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5"/>
-          </svg>              
+            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5" />
+          </svg>
         </span>
 
       </form>
@@ -159,7 +162,8 @@
             <span class="notification__label-star">
               *
             </span>
-            <input class="notification__input notification__input_agency" type="text" name="agency" placeholder="Введите название агенства" required>
+            <input class="notification__input notification__input_agency" type="text" name="agency"
+              placeholder="Введите название агенства" required>
           </label>
 
           <label class="notification__label notification__agent-name">
@@ -169,7 +173,8 @@
             <span class="notification__label-star">
               *
             </span>
-            <input class="notification__input notification__input_agent-name" type="text" name="agent-name" placeholder="Введите имя" required>
+            <input class="notification__input notification__input_agent-name" type="text" name="agent-name"
+              placeholder="Введите имя" required>
           </label>
 
           <label class="notification__label notification__agent-phone">
@@ -179,7 +184,8 @@
             <span class="notification__label-star">
               *
             </span>
-            <input class="notification__input notification__input_agent-phone" type="tel" name="agent-phone" placeholder="7" required value="7">
+            <input class="notification__input notification__input_agent-phone" type="tel" name="agent-phone"
+              placeholder="7" required value="7">
           </label>
 
           <label class="notification__label notification__client-name">
@@ -189,7 +195,8 @@
             <span class="notification__label-star">
               *
             </span>
-            <input class="notification__input notification__input_client-name" type="text" name="client-name" placeholder="Введите имя" required>
+            <input class="notification__input notification__input_client-name" type="text" name="client-name"
+              placeholder="Введите имя" required>
           </label>
 
           <label class="notification__label notification__client-phone">
@@ -199,18 +206,20 @@
             <span class="notification__label-star">
               *
             </span>
-            <input class="notification__input notification__input_client-phone" type="tel" name="client-phone" placeholder="7" required value="7">
+            <input class="notification__input notification__input_client-phone" type="tel" name="client-phone"
+              placeholder="7" required value="7">
           </label>
 
           <label class="notification__label notification__label_textarea">
             <span class="notification__label-text">
               Сообщение
             </span>
-            <textarea class="notification__input notification__input_textarea" name="text" placeholder="Сообщение"></textarea>
+            <textarea class="notification__input notification__input_textarea" name="text"
+              placeholder="Сообщение"></textarea>
           </label>
         </div>
 
-        <button class="btn btn_green btn_reset notification__btn">
+        <button class="btn btn_green notification__btn">
           Отправить
         </button>
 
@@ -226,8 +235,8 @@
 
         <span class="notification__close-btn popup-close">
           <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5"/>
-          </svg>              
+            <path d="M1 1L21 16M21 1L1 16" stroke="#8C8C8C" stroke-width="1.5" />
+          </svg>
         </span>
 
       </form>
