исправит слайдер рекионы на главной

--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,105 @@
   
         </div>
       </div>
-    </section>    
+    </section>   
+
+    <section class="section section_regions regions regions-slider">
+      <div class="container regions__container regions_swiper">
+        <h2 class="regions__title title">
+          В районах Сибири
+        </h2>
+  
+        <ul class="regions__list swiper-wrapper">
+          <li class="regions__item swiper-slide regions__item_1">
+            <h3 class="regions__item-title">
+              Гармония с природой
+            </h3>
+  
+            <p class="regions__item-text">
+              Уединенный район, будет отличным решением для любителей открытых естественных видов, вдали от тесной
+              городской застройки и суеты.
+            </p>
+          </li>
+  
+          <li class="regions__item swiper-slide regions__item_2">
+            <h3 class="regions__item-title">
+              Тихий район
+            </h3>
+  
+            <p class="regions__item-text">
+              Удалённое от больших автомагистралей расположение и закрытый от машин и посторонних людей двор
+            </p>
+          </li>
+  
+          <li class="regions__item swiper-slide regions__item_3">
+            <h3 class="regions__item-title">
+              Все нужное рядом
+            </h3>
+  
+            <p class="regions__item-text">
+              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
+              получения бытовых услуг и товаров первой необходимости
+            </p>
+          </li>
+  
+          <li class="regions__item swiper-slide regions__item_4">
+            <h3 class="regions__item-title">
+              Уникальная экосистема
+            </h3>
+  
+            <p class="regions__item-text">
+              Мы сохранили среду, созданную природой: живописный сосновый лес, который даже зимой будут радовать жителей
+              ярким зеленым обликом
+            </p>
+          </li>
+  
+          <li class="regions__item swiper-slide regions__item_5">
+            <h3 class="regions__item-title">
+              Закрытые и безопасные дворы без машин
+            </h3>
+  
+            <p class="regions__item-text">
+              Ваши дети смогут спокойно и безопасно находиться на прогулке, а вы заниматься домашними делами, наблюдая
+              за ними прямо из окна
+            </p>
+          </li>
+  
+          <li class="regions__item swiper-slide regions__item_2">
+            <h3 class="regions__item-title">
+              Все нужное рядом
+            </h3>
+  
+            <p class="regions__item-text">
+              Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
+              получения бытовых услуг и товаров первой необходимости
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="swiper-navigation">
+        <div class="swiper-button swiper-button-prev swiper-button-prev_reg">
+          <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.8">
+              <rect x="-0.5" y="0.5" width="54" height="54" rx="27" transform="matrix(-1 0 0 1 54.25 0.5)"
+                stroke="#CBCBCB" />
+              <path d="M32.25 20.5L23.25 28L32.25 35.5" stroke="#CBCBCB" stroke-width="2" stroke-linejoin="round" />
+            </g>
+          </svg>
+        </div>
+
+        <div class="swiper-button swiper-button-prev swiper-button-next_reg">
+          <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g opacity="0.8">
+              <rect x="-0.5" y="0.5" width="54" height="54" rx="27" transform="matrix(-1 0 0 1 54.25 0.5)"
+                stroke="#CBCBCB" />
+              <path d="M23.25 20.5L32.25 28L23.25 35.5" stroke="#CBCBCB" stroke-width="2" stroke-linejoin="round" />
+            </g>
+          </svg>
+        </div>
+
+      </div>
+    </section> 
 
     <section class="section section_about about" id="about-section">
       <div class="container about__container">
@@ -416,84 +514,7 @@
   </main>
 
 
-  <section class="section section_regions regions">
-    <div class="container regions__container">
-      <h2 class="regions__title title">
-        В районах Сибири
-      </h2>
 
-      <ul class="regions__list owl-carousel owl-carousel-index">
-        <li class="regions__item regions__item_1">
-          <h3 class="regions__item-title">
-            Гармония с природой
-          </h3>
-
-          <p class="regions__item-text">
-            Уединенный район, будет отличным решением для любителей открытых естественных видов, вдали от тесной
-            городской застройки и суеты.
-          </p>
-        </li>
-
-        <li class="regions__item regions__item_2">
-          <h3 class="regions__item-title">
-            Тихий район
-          </h3>
-
-          <p class="regions__item-text">
-            Удалённое от больших автомагистралей расположение и закрытый от машин и посторонних людей двор
-          </p>
-        </li>
-
-        <li class="regions__item regions__item_3">
-          <h3 class="regions__item-title">
-            Все нужное рядом
-          </h3>
-
-          <p class="regions__item-text">
-            Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
-            получения бытовых услуг и товаров первой необходимости
-          </p>
-        </li>
-
-        <li class="regions__item regions__item_4">
-          <h3 class="regions__item-title">
-            Уникальная экосистема
-          </h3>
-
-          <p class="regions__item-text">
-            Мы сохранили среду, созданную природой: живописный сосновый лес, который даже зимой будут радовать жителей
-            ярким зеленым обликом
-          </p>
-        </li>
-
-        <li class="regions__item regions__item_5">
-          <h3 class="regions__item-title">
-            Закрытые и безопасные дворы без машин
-          </h3>
-
-          <p class="regions__item-text">
-            Ваши дети смогут спокойно и безопасно находиться на прогулке, а вы заниматься домашними делами, наблюдая
-            за ними прямо из окна
-          </p>
-        </li>
-
-        <li class="regions__item regions__item_2">
-          <h3 class="regions__item-title">
-            Все нужное рядом
-          </h3>
-
-          <p class="regions__item-text">
-            Доступ к различным услугам и товарам прямо в доме исключает необходимость выезда в другие районы для
-            получения бытовых услуг и товаров первой необходимости
-          </p>
-        </li>
-
-
-      </ul>
-
-
-    </div>
-  </section>
 
   <section class="section section_slider slider">
     <div class="container slider__container">
