добавит верстку всей главной страницы

--- a/src/akcii.html
+++ b/src/akcii.html
@@ -47,7 +47,7 @@
                 Осталось 12 дней
               </p>
             </span>
-            <a class="promo-page__card-link" href="novosti-item.html">
+            <a class="promo-page__card-link" href="promo-item.html">
               <h2 class="promo-page__card-title">
                 Паркинг в подарок в ЖК «Островский»
               </h2>
@@ -77,7 +77,7 @@
                 Осталось 12 дней
               </p>
             </span>
-            <a class="promo-page__card-link" href="novosti-item.html">
+            <a class="promo-page__card-link" href="promo-item.html">
               <h2 class="promo-page__card-title">
                 Квартиры в расрочку от 2%
               </h2>
@@ -105,7 +105,7 @@
                 01 мая 2024
               </p>
             </span>
-            <a class="promo-page__card-link" href="novosti-item.html">
+            <a class="promo-page__card-link" href="promo-item.html">
               <h2 class="promo-page__card-title">
                 Квартиры в расрочку от 2%
               </h2>
