--- a/src/apartments-item.html
+++ b/src/apartments-item.html
@@ -29,12 +29,137 @@
           </div>
 
           <div class="about__btn-wrap">
-
+            <button class="about__btn about__btn_plan">
+              Планировка
+            </button>
+            <button class="about__btn about__btn_floor">
+              На этаже
+            </button>
+            <button class="about__btn about__btn_section">
+              Секция
+            </button>
           </div>
         </div>
 
         <div class="about__right">
+          <button class="about__btn-complex">
+            <div class="about__btn-complex-img">
+              <svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="0.5" width="30" height="30" rx="15" fill="#9ABC6F" fill-opacity="0.2"/>
+                <path d="M16 6C16 7.33333 13.3333 10 11.2001 10M16 6V10.5M16 6C16 7.33333 18.6667 10 20.7999 10M16 24V15.75M16 10.5C15.1111 12.1667 13.3332 15.3333 9.06664 15.3333M16 10.5V15.75M16 10.5C16.8889 12.1667 18.6668 15.3333 22.9334 15.3333M16 15.75C14.9333 17.6389 11.8399 21 8 21M16 15.75C17.0667 17.6389 20.1601 21 24 21" stroke="#56693E" stroke-width="2"/>
+              </svg>                
+            </div>
+            <p class="about__btn-complex-text">
+              Сосновый квартал  
+            </p>
+            <div class="about__btn-complex-arrow">
+              <svg width="10" height="14" viewBox="0 0 10 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 13L8.5 7L1.5 1" stroke="#646464" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>                
+            </div>
+          </button>
+          <p class="about__right-title title title_25">
+            2-комнатная  61,88 м2
+          </p>
+          <div class="about__right-price-wrap">
+            <p class="about__right-new-price">
+              5 662 000 ₽
+            </p>
+            <p class="about__right-old-price">
+              9 331 000 ₽
+            </p>
+          </div>
+          <div class="about__right-info">
+            <div class="about__right-info-left">
+              <p class="about__right-info-title">
+                Срок сдачи
+              </p>
+              <p class="about__right-info-title">
+                Дом
+              </p>
+              <p class="about__right-info-text about__right-info-text-time">
+                II квартал 2026
+              </p>
+              <p class="about__right-info-text about__right-info-text-section">
+                ГП 3
+              </p>
+            </div>
 
+            <div class="about__right-info-choice choice">
+              <p class="choice__label">
+                Срок сдачи
+              </p>
+              <div class="choice__select select select-frame">
+                <div class="select__wrapper">
+                  <span class="select__placeholder">
+                    Все
+                  </span>
+                  <p class="select__text select__text_carton"></p>
+                </div>
+                <span class="select__arrow">
+                  <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.3335 1L7.54039 7L13.3335 1" stroke="#363636" stroke-width="1.5"
+                      stroke-linejoin="round" />
+                  </svg>
+                </span>
+                <ul class="select__list select__list_carton">
+                  <li class="select__item" data-id="sosnoviy">Все</li>
+                  <li class="select__item" data-id="sosnoviy">II квартал 2025</li>
+                  <li class="select__item" data-id="sosnoviy">II квартал 2026</li>
+                  <li class="select__item" data-id="sosnoviy">II квартал 2027</li>
+
+                  <!-- <li class="select__item" data-id="duboviy">Дубовый</li> -->
+                  <!-- <li class="select__item" data-id="berezoviy">Березовый</li> -->
+                </ul>
+              </div>
+            </div>            
+          </div>
+          <div class="about__right-btn-block">
+            <p class="about__right-btn-block-title">
+              Особенности
+            </p>
+            <div class="about__right-btn-block-wrap">
+              <button class="about__right-btn-block-filter" data-id="promotion">
+                Акция
+                <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="0.75" y="1.25" width="17.5" height="17.5" rx="8.75" stroke="#56693E" stroke-width="1.5" />
+                  <path
+                    d="M7.95597 12.2209V12.1009C7.95904 11.5438 8.01136 11.1006 8.11293 10.7713C8.21757 10.442 8.36529 10.1773 8.55611 9.97727C8.74692 9.77415 8.97929 9.58795 9.2532 9.41868C9.44093 9.30173 9.60866 9.17401 9.75639 9.03551C9.9072 8.89394 10.0257 8.73698 10.1119 8.56463C10.198 8.3892 10.2411 8.19377 10.2411 7.97834C10.2411 7.7352 10.1842 7.52438 10.0703 7.34588C9.95644 7.16738 9.80256 7.02888 9.60867 6.9304C9.41785 6.83191 9.20395 6.78267 8.96697 6.78267C8.74846 6.78267 8.54072 6.83037 8.34375 6.92578C8.14986 7.01811 7.98828 7.15968 7.85902 7.3505C7.73284 7.53823 7.66205 7.77675 7.64666 8.06605H6.0032C6.01858 7.4813 6.16016 6.99195 6.42791 6.59801C6.69875 6.20407 7.05575 5.90862 7.49893 5.71165C7.94519 5.51468 8.43762 5.41619 8.97621 5.41619C9.56404 5.41619 10.0811 5.51929 10.5273 5.7255C10.9767 5.9317 11.326 6.22562 11.5753 6.60724C11.8277 6.9858 11.9538 7.43513 11.9538 7.95526C11.9538 8.30611 11.8969 8.62003 11.783 8.89702C11.6722 9.17401 11.5137 9.42022 11.3075 9.63565C11.1013 9.85109 10.8567 10.0434 10.5735 10.2127C10.3242 10.3666 10.1196 10.5266 9.95952 10.6928C9.80256 10.859 9.68561 11.0545 9.60867 11.2791C9.5348 11.5007 9.49633 11.7746 9.49325 12.1009V12.2209H7.95597ZM8.75923 15.1016C8.48224 15.1016 8.24373 15.0031 8.04368 14.8061C7.84363 14.6091 7.74361 14.3691 7.74361 14.0859C7.74361 13.8089 7.84363 13.572 8.04368 13.375C8.24373 13.178 8.48224 13.0795 8.75923 13.0795C9.03314 13.0795 9.27012 13.178 9.47017 13.375C9.6733 13.572 9.77486 13.8089 9.77486 14.0859C9.77486 14.2737 9.72715 14.4445 9.63175 14.5984C9.53942 14.7522 9.41631 14.8754 9.26243 14.9677C9.11162 15.0569 8.94389 15.1016 8.75923 15.1016Z"
+                    fill="#56693E" />
+                </svg>
+              </button>
+              <button class="about__right-btn-block-filter" data-id="today">
+                Ключи сегодня
+                <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="0.75" y="1.25" width="17.5" height="17.5" rx="8.75" stroke="#56693E" stroke-width="1.5" />
+                  <path
+                    d="M7.95597 12.2209V12.1009C7.95904 11.5438 8.01136 11.1006 8.11293 10.7713C8.21757 10.442 8.36529 10.1773 8.55611 9.97727C8.74692 9.77415 8.97929 9.58795 9.2532 9.41868C9.44093 9.30173 9.60866 9.17401 9.75639 9.03551C9.9072 8.89394 10.0257 8.73698 10.1119 8.56463C10.198 8.3892 10.2411 8.19377 10.2411 7.97834C10.2411 7.7352 10.1842 7.52438 10.0703 7.34588C9.95644 7.16738 9.80256 7.02888 9.60867 6.9304C9.41785 6.83191 9.20395 6.78267 8.96697 6.78267C8.74846 6.78267 8.54072 6.83037 8.34375 6.92578C8.14986 7.01811 7.98828 7.15968 7.85902 7.3505C7.73284 7.53823 7.66205 7.77675 7.64666 8.06605H6.0032C6.01858 7.4813 6.16016 6.99195 6.42791 6.59801C6.69875 6.20407 7.05575 5.90862 7.49893 5.71165C7.94519 5.51468 8.43762 5.41619 8.97621 5.41619C9.56404 5.41619 10.0811 5.51929 10.5273 5.7255C10.9767 5.9317 11.326 6.22562 11.5753 6.60724C11.8277 6.9858 11.9538 7.43513 11.9538 7.95526C11.9538 8.30611 11.8969 8.62003 11.783 8.89702C11.6722 9.17401 11.5137 9.42022 11.3075 9.63565C11.1013 9.85109 10.8567 10.0434 10.5735 10.2127C10.3242 10.3666 10.1196 10.5266 9.95952 10.6928C9.80256 10.859 9.68561 11.0545 9.60867 11.2791C9.5348 11.5007 9.49633 11.7746 9.49325 12.1009V12.2209H7.95597ZM8.75923 15.1016C8.48224 15.1016 8.24373 15.0031 8.04368 14.8061C7.84363 14.6091 7.74361 14.3691 7.74361 14.0859C7.74361 13.8089 7.84363 13.572 8.04368 13.375C8.24373 13.178 8.48224 13.0795 8.75923 13.0795C9.03314 13.0795 9.27012 13.178 9.47017 13.375C9.6733 13.572 9.77486 13.8089 9.77486 14.0859C9.77486 14.2737 9.72715 14.4445 9.63175 14.5984C9.53942 14.7522 9.41631 14.8754 9.26243 14.9677C9.11162 15.0569 8.94389 15.1016 8.75923 15.1016Z"
+                    fill="#56693E" />
+                </svg>
+              </button>
+              <button class="about__right-btn-block-filter" data-id="balcony">
+                Балкон
+              </button>
+              <button class="about__right-btn-block-filter" data-id="dressing_room">
+                Гардеробная
+              </button>
+              <button class="about__right-btn-block-filter" data-id="two_side">
+                Окна на 2 стороны
+              </button>
+              <button class="about__right-btn-block-filter" data-id="side_3">
+                Окна на 3 стороны
+              </button>
+              <button class="about__right-btn-block-filter about__right-btn-block-filter_disabled" data-id="guest_bathroom">
+                Гостевой санузел
+              </button>
+              <button class="about__right-btn-block-filter about__right-btn-block-filter_disabled" data-id="terrace">
+                Терраса
+              </button>
+              <button class="about__right-btn-block-filter" data-id="kitchen_living_room">
+                Кухня-гостиная
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
